--- a/calc.css
+++ b/calc.css
@@ -1,90 +1,91 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-body{
-    height: 100dvh;
-    place-items: center;
-    display: grid;
-    overflow: hidden;
+body {
+  height: 100dvh;
+  place-items: center;
+  display: grid;
+  overflow: hidden;
+  background: gray;
 }
 
-.calc-container{
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    background-color: hsl(240 4% 11%);
-    gap: .9rem 1rem;
-    justify-content: center;
-    justify-self: center;
-    align-items: center;
-    width: fit-content;
-    position: relative;
-    padding: 10px;
-    border-radius: 15px;
+.calc-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  background-color: hsl(240 4% 11%);
+  gap: 0.9rem 1rem;
+  justify-content: center;
+  justify-self: center;
+  align-items: center;
+  width: fit-content;
+  position: relative;
+  padding: 10px;
+  border-radius: 15px;
 }
 
-#calc-input{
-    grid-column: 1/span 4;
-    background-color: hsl(240 4% 11%);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 30px;
-    height: 100px;
-    color: white;
-    outline: none;
-    border: none;
-    width: 100%;
-    text-align: right;
+#calc-input {
+  grid-column: 1 / span 4;
+  background-color: hsl(240 4% 11%);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 30px;
+  height: 100px;
+  color: white;
+  outline: none;
+  border: none;
+  width: 100%;
+  text-align: right;
 }
 
-.calc-zero{
-    grid-column: 1/span 2;
-    width: 8rem;
-    border-radius: 30px 30px 30px 30px;
-    text-align: left;
+.calc-zero {
+  grid-column: 1 / span 2;
+  width: 8rem;
+  border-radius: 30px 30px 30px 30px;
+  text-align: left;
 }
 
-button{
-    border-radius: 50%;
-    width: 3.5rem;
-    height: 3.5rem;
-    outline: none;
-    border: none;
-    text-align: center;
-    padding: 0px 15px;
-    background-color: hsl(0 0% 31%);
-    font-size: 33px;
-    color: hsl(0, 0%, 100%);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+button {
+  border-radius: 50%;
+  width: 3.5rem;
+  height: 3.5rem;
+  outline: none;
+  border: none;
+  text-align: center;
+  padding: 0px 15px;
+  background-color: hsl(0 0% 31%);
+  font-size: 33px;
+  color: hsl(0, 0%, 100%);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
-button:hover{
-    background-color: hsl(0 0% 51%);
+button:hover {
+  background-color: hsl(0 0% 51%);
 }
 
-button:active{
-    background-color: hsl(0 0% 71%);
+button:active {
+  background-color: hsl(0 0% 71%);
 }
 
-.calc-fun{
-    background-color: hsl(60, 5%, 64%)
+.calc-fun {
+  background-color: hsl(60, 5%, 64%);
 }
 
-.calc-fun:hover{
-    background-color: hsl(60, 5%, 74%);
+.calc-fun:hover {
+  background-color: hsl(60, 5%, 74%);
 }
 
-.calc-fun:active{
-    background-color: hsl(60, 5%, 84%);
+.calc-fun:active {
+  background-color: hsl(60, 5%, 84%);
 }
 
-.calc-opr{
-    background-color: hsl(34 100% 50%);
+.calc-opr {
+  background-color: hsl(34 100% 50%);
 }
 
-.calc-opr:hover{
-    background-color: hsl(34 100% 60%);
+.calc-opr:hover {
+  background-color: hsl(34 100% 60%);
 }
 
-.calc-opr:active{
-    background-color: hsl(34 100% 70%);
+.calc-opr:active {
+  background-color: hsl(34 100% 70%);
 }
